@@ -1,26 +1,43 @@
 package org.apache.http;
 
+import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.InputStreamReader;
+import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import org.apache.exception.InvalidRequestException;
+import org.apache.exception.SocketReadException;
 
 public class HttpRequest {
 
     private final HttpMethod method;
     private final String uri;
-    private final Map<String, String> queryString;
+    private final Map<String, String> queryString = new HashMap<>();
     private final HttpVersion version;
+    private final Map<String, String> header = new HashMap<>();
+    private final Map<String, String> body = new HashMap<>();
 
-    public HttpRequest(List<String> message) {
-        validateEmptyMessage(message);
-        validateStartLineFormat(message.getFirst());
+    public HttpRequest(InputStream inputStream) {
+        BufferedReader bufferedReader =
+                new BufferedReader(new InputStreamReader(inputStream, StandardCharsets.UTF_8));
+        try {
+            List<String> startLinePart = readStartLine(bufferedReader);
+            this.method = HttpMethod.valueOf(startLinePart.get(0));
+            this.uri = parseUri(startLinePart.get(1));
+            this.version = HttpVersion.parse(startLinePart.get(2));
+            parseQueryParam(startLinePart.get(1));
 
-        List<String> startLine = List.of(message.getFirst().split(" "));
-        method = HttpMethod.valueOf(startLine.get(0));
-        uri = parseUri(startLine.get(1));
-        queryString = parseQueryParam(startLine.get(1));
-        version = HttpVersion.parse(startLine.get(2));
+            readHeader(bufferedReader);
+            if (checkQueryStringExistence("Content-Length")) {
+                readBody(bufferedReader);
+            }
+        } catch (IOException e) {
+            throw new SocketReadException("HTTP 요청 메세지가 올바르지 않습니다.");
+        }
     }
 
     public boolean checkQueryStringExistence(String key) {
@@ -43,16 +60,48 @@ public class HttpRequest {
         return queryString.get(key);
     }
 
+    public String getHeader(String key) {
+        return header.get(key);
+    }
+
+    private List<String> readStartLine(BufferedReader reader) throws IOException {
+        String startLine = reader.readLine();
+        validateStartLineFormat(startLine);
+        return List.of(startLine.split(" "));
+    }
+
+    private void readHeader(BufferedReader reader) throws IOException {
+        String line;
+        while (!(line = reader.readLine()).isEmpty()) {
+            List<String> headerLinePart = List.of(line.split(":"));
+            String key = headerLinePart.getFirst().trim();
+            String value = headerLinePart.getLast().trim();
+            header.put(key, value);
+        }
+    }
+
+    private void readBody(BufferedReader reader) throws IOException {
+        int contentLength = Integer.parseInt(getHeader("Content-Length"));
+        char[] buffer = new char[contentLength];
+        int read = reader.read(buffer, 0, contentLength);
+        String bodyText = new String(buffer, 0, read);
+        String decoded = URLDecoder.decode(bodyText, StandardCharsets.UTF_8);
+
+        List<String> queryStringParts = List.of(decoded.split("&"));
+        for (String queryStringPart : queryStringParts) {
+            List<String> keyValue = List.of(queryStringPart.split("="));
+            body.put(keyValue.getFirst(), keyValue.getLast());
+        }
+    }
+
     private String parseUri(String uriLine) {
         List<String> startLinePart = List.of(uriLine.split("\\?"));
         return startLinePart.getFirst();
     }
 
-    private Map<String, String> parseQueryParam(String uriLine) {
-        HashMap<String, String> queryStrings = new HashMap<>();
-
+    private void parseQueryParam(String uriLine) {
         if (!hasQueryParam(uriLine)) {
-            return queryStrings;
+            return;
         }
 
         List<String> startLinePart = List.of(uriLine.split("\\?"));
@@ -60,14 +109,7 @@ public class HttpRequest {
         List<String> queryStringParts = List.of(queryStringLine.split("&"));
         for (String queryStringPart : queryStringParts) {
             List<String> keyValue = List.of(queryStringPart.split("="));
-            queryStrings.put(keyValue.getFirst(), keyValue.getLast());
-        }
-        return queryStrings;
-    }
-
-    private void validateEmptyMessage(List<String> message) {
-        if (message.isEmpty()) {
-            throw new InvalidRequestException("요청 메세지가 비어있습니다.");
+            queryString.put(keyValue.getFirst(), keyValue.getLast());
         }
     }
 
